5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1674_1879.log
== TEST (2019-05-01 13:54:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("horas extras: "))
hf = float(input("horas nao trabalhadas: "))
h = he -1/4*hf
print(he," extras e", hf," de falta")
if(h>400):
	print("R$ "500.0 )
else:
	print("R$ "100.0)
-- ERROR:
File "XXXX", line 7
    print("R$ "500.0 )
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:54:39) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("horas extras: "))
hf = float(input("horas nao trabalhadas: "))
h = he -1/4*hf
print(he," extras e", hf," de falta")
if(h>400):
	print("R$ "500.0 )
else:
	print("R$ "100.0)
-- ERROR:
File "XXXX", line 7
    print("R$ "500.0 )
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:54:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("horas extras: "))
hf = float(input("horas nao trabalhadas: "))
h = he -1/4*hf
print(he," extras e", hf," de falta")
if(h>400):
	print("R$ ",500.0 )
else:
	print("R$ ",100.0)
-- OUTPUT:
420.0  extras e 20.0  de falta
R$  500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 13:55:06) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("horas extras: "))
hf = float(input("horas nao trabalhadas: "))
h = he -1/4*hf
print(he," extras e", hf," de falta")
if(h>400):
	print("R$ ",500.0 )
else:
	print("R$ ",100.0)
-- OUTPUT:
420.0  extras e 20.0  de falta
R$  500.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 13:55:27) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.
he = float(input("horas extras: "))
hf = float(input("horas nao trabalhadas: "))
h = he -1/4*hf
print(he," extras e", hf," de falta")
if(h>400):
	print("R$ ",500.0 )
else:
	print("R$ ",100.0)
-- EXECUTION TIME:
0.196268
-- TEST CASE 1:
---- input:
420
20
---- correct output:
420.0 extras e 20.0 de falta
R$ 500.0
---- user output:
420.0  extras e 20.0  de falta
R$  500.0
-- TEST CASE 2:
---- input:
400.5
100
---- correct output:
400.5 extras e 100.0 de falta
R$ 100.0
---- user output:
400.5  extras e 100.0  de falta
R$  100.0
-- TEST CASE 3:
---- input:
300
44
---- correct output:
300.0 extras e 44.0 de falta
R$ 100.0
---- user output:
300.0  extras e 44.0  de falta
R$  100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
